--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.3",
     "@astrojs/netlify": "^6.1.0",
     "@astrojs/tailwind": "^5.1.4",
+    "@types/alpinejs": "^3.13.11",
+    "alpine": "^0.2.1",
+    "alpinejs": "^3.14.8",
     "astro": "^5.1.6",
     "tailwindcss": "^3.4.17"
   }
