--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "alpine": "^0.2.1",
     "alpinejs": "^3.14.8",
     "astro": "^5.1.6",
+    "pocketbase": "^0.25.1",
     "tailwindcss": "^3.4.17"
   }
 }
